Fix display glitch with embed code on mobile screen widths

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -58,6 +58,7 @@ p{
 .embed-code {
 	padding:5px;
 	font-family: courier;
+	max-width: 100%;
 }
 
 @media (max-width: 1000px) {
